<resources>
    <string name="app_name" translatable="false">Práctica2</string>
    <string name="button_play_again">Play again</string>
    <string name="button_exit">Exit</string>
    <string name="button_final">Final</string>
    <string name="description_die_image">Die image</string>
    <string name="label_accumulated">Accumulated in the turn: %1$d</string>
    <string name="label_collect">Collect</string>
    <string name="label_exit_question">Exit or start a new game?</string>
    <string name="label_start_turn">Starts turn %1$s</string>
    <string name="label_throw">Throw</string>
    <string name="label_throwing">Throwing</string>
    <string name="label_won">%1$s wins</string>
    <string name="machine">Machine</string>
    <string-array name="number_players">
        <item>One player</item>
        <item>Two players</item>
    </string-array>
    <string name="player">Player %1$d</string>
    <string name="start_new_game">Start new game</string>
</resources>