<android.support.v7.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/fragments"
    app:columnCount="2"
    app:rowCount="4"
    tools:context=".fragment.PanelFragment">

    <TextView
        android:id="@+id/textView_player_turn"
        style="@style/game_state"
        app:layout_column="0"
        app:layout_columnSpan="2"
        app:layout_row="0"
        app:layout_rowWeight="0.25" />

    <TextView
        android:id="@+id/textView_accumulated"
        style="@style/game_state"
        android:text="@string/label_accumulated"
        app:layout_column="0"
        app:layout_columnSpan="2"
        app:layout_row="1"
        app:layout_rowWeight="0.25" />

    <TextView
        android:id="@+id/textView_start_turn"
        style="@style/game_state"
        android:text="@string/label_start_turn"
        app:layout_column="0"
        app:layout_columnSpan="2"
        app:layout_gravity="fill_vertical"
        app:layout_row="2"
        app:layout_rowWeight="0.25" />

    <Button
        android:id="@+id/button_throw"
        style="@style/buttons"
        android:text="@string/label_throw"
        app:layout_column="0"
        app:layout_gravity="bottom|start"
        app:layout_row="3"
        app:layout_rowWeight="0.25" />

    <Button
        android:id="@+id/button_collect"
        style="@style/buttons"
        android:text="@string/label_collect"
        app:layout_column="1"
        app:layout_gravity="bottom|end"
        app:layout_row="3" />

</android.support.v7.widget.GridLayout>
